[gd_scene load_steps=19 format=3 uid="uid://vikllycrom4u"]

[ext_resource type="Script" path="res://player/player.gd" id="1_l318w"]
[ext_resource type="Script" path="res://player/cam_rig.gd" id="2_3hpx8"]
[ext_resource type="Script" path="res://ui/modal.gd" id="3_kpror"]
[ext_resource type="Script" path="res://tool_helpers/tractor_beam.gd" id="3_nopqo"]
[ext_resource type="Script" path="res://player/camera_tracking.gd" id="3_tyh36"]
[ext_resource type="Script" path="res://tool_helpers/tool.gd" id="3_wep7e"]
[ext_resource type="Script" path="res://ui/ui_mode.gd" id="4_1xhtu"]
[ext_resource type="Texture2D" uid="uid://bevpj5ww678ek" path="res://ui/crosshair-ref.png" id="4_yr5fy"]
[ext_resource type="Theme" uid="uid://bntdbgkf7koit" path="res://ui/ui_theme.tres" id="5_jxvnj"]
[ext_resource type="Script" path="res://ui/tool_options.gd" id="8_0kvrs"]
[ext_resource type="Script" path="res://ui/debug_console.gd" id="10_kyocl"]
[ext_resource type="PackedScene" uid="uid://blrrytc8d2j1m" path="res://ui/entities.tscn" id="10_l76aw"]
[ext_resource type="PackedScene" uid="uid://bm4wljocjky8b" path="res://ui/code_editor.tscn" id="12_rvdh6"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3ggmr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_i65uo"]
radius = 0.25
height = 1.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3vj2d"]
radius = 0.25
height = 1.5
radial_segments = 12
rings = 6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_72gex"]

[sub_resource type="SphereMesh" id="SphereMesh_goski"]
radius = 0.05
height = 0.1
radial_segments = 4
rings = 2

[node name="player" type="RigidBody3D"]
collision_layer = 3
mass = 40.0
center_of_mass_mode = 1
physics_material_override = SubResource("PhysicsMaterial_3ggmr")
continuous_cd = true
max_contacts_reported = 4
contact_monitor = true
can_sleep = false
freeze_mode = 1
script = ExtResource("1_l318w")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_i65uo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_3vj2d")

[node name="cam_rig" type="Node" parent="."]
script = ExtResource("2_3hpx8")

[node name="cam_pos" type="Node3D" parent="cam_rig"]

[node name="cam_yaw" type="Node3D" parent="cam_rig/cam_pos"]

[node name="cam_pitch" type="Node3D" parent="cam_rig/cam_pos/cam_yaw"]

[node name="Camera3D" type="Camera3D" parent="cam_rig/cam_pos/cam_yaw/cam_pitch"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38606, 3.18746)
cull_mask = 1021
current = true
fov = 85.0
near = 0.06
far = 1800.0
script = ExtResource("3_tyh36")

[node name="grab_cast" type="RayCast3D" parent="cam_rig/cam_pos/cam_yaw/cam_pitch/Camera3D"]
target_position = Vector3(0, 0, -2)
collision_mask = 4
script = ExtResource("3_nopqo")

[node name="debug" type="MeshInstance3D" parent="cam_rig/cam_pos/cam_yaw/cam_pitch/Camera3D/grab_cast"]
material_override = SubResource("StandardMaterial3D_72gex")
mesh = SubResource("SphereMesh_goski")

[node name="debug2" type="MeshInstance3D" parent="cam_rig/cam_pos/cam_yaw/cam_pitch/Camera3D/grab_cast"]
material_override = SubResource("StandardMaterial3D_72gex")
mesh = SubResource("SphereMesh_goski")

[node name="interaction_cast" type="RayCast3D" parent="cam_rig/cam_pos/cam_yaw/cam_pitch/Camera3D"]
target_position = Vector3(0, 0, -2.3)
collision_mask = 8

[node name="placement_cast" type="RayCast3D" parent="cam_rig/cam_pos/cam_yaw/cam_pitch/Camera3D"]
target_position = Vector3(0, 0, -8)
collision_mask = 13

[node name="tool_cast" type="RayCast3D" parent="cam_rig/cam_pos/cam_yaw/cam_pitch/Camera3D"]
target_position = Vector3(0, 0, -40)
script = ExtResource("3_wep7e")

[node name="code_editor" parent="." instance=ExtResource("12_rvdh6")]
visible = false

[node name="ui" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_jxvnj")
script = ExtResource("3_kpror")

[node name="gameing" type="Control" parent="ui"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_1xhtu")
show_cursor = false

[node name="reticle" type="Control" parent="ui/gameing"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="crosshair_grabbing" type="Line2D" parent="ui/gameing/reticle"]
scale = Vector2(0.761448, 0.761448)
points = PackedVector2Array(-27.579, 0, 27.579, 0)
width = 2.0

[node name="crosshair_grabbing2" type="Line2D" parent="ui/gameing/reticle/crosshair_grabbing"]
position = Vector2(0, 1.96991)
scale = Vector2(1, 0.984964)
points = PackedVector2Array(-27.579, 0, 27.579, 0)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Crosshair-ref" type="Sprite2D" parent="ui/gameing/reticle"]
rotation = 0.785398
texture = ExtResource("4_yr5fy")

[node name="crosshair_usable" type="Sprite2D" parent="ui/gameing/reticle"]
position = Vector2(0.174059, 0)
rotation = 0.785398
scale = Vector2(0.761448, 0.761448)
texture = ExtResource("4_yr5fy")

[node name="crosshair_grab" type="Sprite2D" parent="ui/gameing/reticle"]
position = Vector2(0, -15)
rotation = 0.785398
scale = Vector2(0.761448, 0.761448)
texture = ExtResource("4_yr5fy")

[node name="debug" type="VBoxContainer" parent="ui/gameing"]
layout_mode = 0
offset_left = 141.0
offset_top = 18.0
offset_right = 395.0
offset_bottom = 95.0

[node name="data_1" type="Label" parent="ui/gameing/debug"]
layout_mode = 2

[node name="data_2" type="Label" parent="ui/gameing/debug"]
layout_mode = 2

[node name="data_3" type="Label" parent="ui/gameing/debug"]
layout_mode = 2

[node name="tool" type="Label" parent="ui/gameing"]
layout_mode = 0
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 29.0
offset_right = 41.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Tool Goes Here"
metadata/_edit_layout_mode = 1

[node name="prompt" type="Label" parent="ui/gameing"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -12.0
offset_right = 259.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Prompt"
metadata/_edit_layout_mode = 1

[node name="spawner" type="TabContainer" parent="ui"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.682
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -7.664
offset_top = 19.0
offset_right = -42.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("4_1xhtu")
metadata/_edit_layout_mode = 1

[node name="Entities" parent="ui/spawner" instance=ExtResource("10_l76aw")]
layout_mode = 2

[node name="Tools" parent="ui/spawner" instance=ExtResource("10_l76aw")]
visible = false
layout_mode = 2
directory = "tools"
expand_folder_depth = 2
mode = 1

[node name="Options" type="Panel" parent="ui/spawner" node_paths=PackedStringArray("tool")]
visible = false
layout_mode = 2
script = ExtResource("8_0kvrs")
tool = NodePath("../../../cam_rig/cam_pos/cam_yaw/cam_pitch/Camera3D/tool_cast")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true

[node name="margin" type="MarginContainer" parent="ui/spawner/Options"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="scroll" type="ScrollContainer" parent="ui/spawner/Options/margin"]
layout_mode = 2
metadata/_edit_layout_mode = 1

[node name="widgets" type="GridContainer" parent="ui/spawner/Options/margin/scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 8
columns = 2
metadata/_edit_layout_mode = 1

[node name="debug_console" type="VBoxContainer" parent="ui"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_kyocl")

[node name="Panel" type="Panel" parent="ui/debug_console"]
layout_mode = 2
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ui/debug_console/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
bbcode_enabled = true
context_menu_enabled = true
selection_enabled = true

[node name="LineEdit" type="LineEdit" parent="ui/debug_console"]
layout_mode = 2
placeholder_text = "type a command here"
caret_blink = true

[connection signal="spawn" from="ui/spawner/Entities" to="ui" method="_on_entity_spawn"]
[connection signal="spawn" from="ui/spawner/Tools" to="ui" method="_on_tool_spawn"]
[connection signal="text_submitted" from="ui/debug_console/LineEdit" to="ui/debug_console" method="_on_line_edit_text_submitted"]
